# yandex_music_downloader

./: README.md  pyproject.toml  requirements.txt
config/: loader.py
ym_downloader/: __main__.py  cli.py  utils.py
